Have swapped out the sun base64 for the android base64